commit after week 14

--- a/views/admin/category/index.ejs
+++ b/views/admin/category/index.ejs
@@ -41,7 +41,7 @@
                           <% if (!item.status) { %>
                             <button type="button" onclick="changeStatus('<%= item._id %>', true, this)" class="btn btn-success w-50">Active</button>
                             <% } else { %> 
-                              <button type="button" onclick="changeStatus('<%= item._id %>', false, this)" class="btn btn-danger w-50">Deactive</button>
+                              <button type="button" onclick="changeStatus('<%= item._id %>', false, this)" class="btn btn-danger w-50">Inactive</button>
                           <% } %>
                         </h6>
                       </td>
@@ -67,7 +67,6 @@
   
 
 <script>
-
 async function changeStatus(orderId, status, btn) {
     try {
       const response = await fetch("/admin/categoryStatus", {
