--- a/views/admin/coupon/index.ejs
+++ b/views/admin/coupon/index.ejs
@@ -65,7 +65,7 @@
                           <% if (!item.status) { %>
                             <button type="button" onclick="changeStatus('<%= item._id %>', true, this)" class="btn btn-success w-100">Active</button>
                             <% } else { %> 
-                              <button type="button" onclick="changeStatus('<%= item._id %>', false, this)" class="btn btn-danger w-100">Deactive</button>
+                              <button type="button" onclick="changeStatus('<%= item._id %>', false, this)" class="btn btn-danger w-100">Inactive</button>
                           <% } %>
                         </h6>
                       </td>
