--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -63,15 +63,7 @@
                         </li>
                         <li class="nav-small-cap">
                             <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                            <span class="hide-menu">MANAGE PRODUCT</span>
-                        </li>
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="/admin/category" aria-expanded="false">
-                                <span>
-                                    <i class="ti ti-article"></i>
-                                </span>
-                                <span class="hide-menu">Categories</span>
-                            </a>
+                            <span class="hide-menu">INVENTORY</span>
                         </li>
                         <li class="sidebar-item">
                             <a class="sidebar-link" href="/admin/food" aria-expanded="false">
@@ -83,6 +75,14 @@
                                     <path d="M11 14v-.01" />
                                   </svg>
                                 <span class="hide-menu">Food</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" href="/admin/category" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-article"></i>
+                                </span>
+                                <span class="hide-menu">Categories</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
