--- a/views/public/assets/css/preloader.css
+++ b/views/public/assets/css/preloader.css
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #001a4a;
+    background-color: #ffcf60;
     z-index: 999999;
 }
 
