--- a/views/public/cart.ejs
+++ b/views/public/cart.ejs
@@ -12,10 +12,11 @@
                         </div>
                         <div class="card-body cart">
                             <div class="col-sm-12 empty-cart-cls text-center">
-                                <img src="./assets/img/cart.png" width="130" height="130" class="img-fluid mb-4 mr-3">
+                                <img src="./assets/img/emptyCart.gif" width="380" height="130" class="img-fluid mb-4 mr-3">
                                 <h3><strong>Your Cart is Empty</strong></h3>
-                                <h4>Add Foods</h4>
-                                <a href="/foods" class="btn btn-primary cart-btn-transform m-3" data-abc="true">Continue Shopping</a>
+                                <h5>
+                                    <a href="/foods" class="btn btn-primary cart-btn-transform m-3" data-abc="true">Continue Shopping</a>
+                                </h5>
                             </div>
                         </div>
                     </div>
