--- a/views/public/login.ejs
+++ b/views/public/login.ejs
@@ -27,6 +27,7 @@
 			<br>
 			<div class="card-body">
 			  <h1 class="text-center">login</h1>
+<!-- 
 			  <form class="login_form" action="/loginAuthenticate" method="post" id="contactForm" onsubmit="return validateLogin()">
 				<div class="mb-3">
 					<label for="Email" id="emailLabel" class="form-label">Email Id</label>
@@ -41,7 +42,7 @@
 					<a class="text-primary fw-bold" href="/forgot-password">Forgot Password ?</a>
 					<a class="text-primary fw-bold ms-2" href="/signup">Create an account</a>
 				</div>
-			  </form>
+			  </form> -->
 			</div>
 		  </div>
 		  
@@ -50,6 +51,10 @@
 	</div>
   </div>
 </div>
+
+
+
+
 <script src="assets/js/validate.js"></script>
 <!-- include footer -->
 <%- include('./includes/footer') %>
