--- a/views/admin/banner/index.ejs
+++ b/views/admin/banner/index.ejs
@@ -73,7 +73,7 @@
                           <% if (!item.status) { %>
                             <button type="button" onclick="changeStatus('<%= item._id %>', true)" class="btn btn-success w-100">Active</button>
                             <% } else { %> 
-                              <button type="button" onclick="changeStatus('<%= item._id %>', false)" class="btn btn-danger w-100">Deactive</button>
+                              <button type="button" onclick="changeStatus('<%= item._id %>', false)" class="btn btn-danger w-100">Inactive</button>
                           <% } %>
                         </h6>
                       </td>
