--- a/views/public/canceledOrders.ejs
+++ b/views/public/canceledOrders.ejs
@@ -44,8 +44,8 @@
                                             <span class="mb-0 px-3"><b>Dish :</b> <%= element.carted.foodName %></span><span class="mb-0 px-3"><b>Qty :</b> <%= element.quantity %></span><span class="mb-0 p-3"><b>Price :</b> <%= element.total %></span>
                                             <hr>
                                         <% }) %>
-                                        <h4 class="mb-0 px-3">Total : <span>₹ <%= item.subTotal %></span></h4>
-                                    </div>
+                                        <h4 class="mb-0 px-3 float-start">Total : <span class="text-danger">₹ <%= item.subTotal %></span></h4>
+                                        <h4 class="mb-0 px-3">Wallet Amount : <span class="text-danger">₹ <%= item.walletAmount ? item.walletAmount : 'None' %></span></h4>                                    </div>
                                 </div>
                             </div>
                             <% }) %> 
