--- a/views/public/detailPage.ejs
+++ b/views/public/detailPage.ejs
@@ -1,18 +1,23 @@
 <!-- include header -->
+
 <%- include('./includes/header') %>
     <div class="container-fluid padd-top">
         <div class="container">
             <div class="row gx-4 gx-lg-5 align-datas-center">
-                
-                <div class="col-lg-6 px-5"><img class="img-fluid rounded mb-4 mb-lg-0"
-                        src="/food/<%= locals.data.image %>" alt="<%= locals.data.foodName %>" /></div>
-                <div class="col-lg-6">
+                <div class="col-lg-4 pt-5">
+                    <div class="large-5 column">
+                        <div class="xzoom-container">
+                          <img class="xzoom" id="xzoom-default" src="/food/<%= locals.data.image %>" xoriginal="/food/<%= locals.data.image %>" width="100%" />
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-8">
                     <div class="alert d-none ml-5" role="alert" id="alertResult">
                         <%= locals.msg %>
                     </div>
                     <%= data.category %>
                         &nbsp;
-                        <i class="bi bi-circle-fill text-<%= locals.data.type === 1 ? "success" : "danger" %>"></i>
+                        <i class="bi bi-circle-fill fs-6 text-<%= locals.data.type === 1 ? "success" : "danger" %>"></i>
 
                         <h1 class="font-weight-light">
                             <%= locals.data.foodName %>
@@ -33,56 +38,35 @@
                         <p>
                             <%= locals.data.ingredients %>
                         </p>
-                        <% if (locals.data.totalStoke < 5 && locals.data.totalStoke > 0) { %>
-                            <p class="text-danger">Hurry Up, Only <span class="stock"><%= locals.data.totalStoke %></span> left</p>
+                        <% if (locals.data.totalStoke > 10) { %>
+                            <h6><span class="stock"><%= locals.data.totalStoke %></span> stock left</h6>
+                        <% }else if (locals.data.totalStoke <= 10 && locals.data.totalStoke > 0) { %>
+                            <h6 class="text-danger">Hurry Up, Only <span class="stock"><%= locals.data.totalStoke %></span> left</h6>
                         <% }else if(locals.data.totalStoke <= 0){ %>
-                            <p class="text-danger">Out of Stock</p>
+                            <h6 class="text-danger">Out of Stock</h6>
                         <% }%>
-                        <button id="addToCart" onclick="addToCart(`<%= JSON.stringify(data) %>`, `<%= isAuthenticated %>`) " class="btn btn-warning w-25 fs-5 rounded-2">Add to Cart</button>
+                        <button id="addToCart" onclick="addToCart(`<%= JSON.stringify(data) %>`, `<%= isAuthenticated %>`) " class="btn btn-warning w-25 fs-5 rounded-2 float-start"><i class="bi bi-bag-fill p-1"></i> Add to Cart</button>
+                        <div class="float-start fs-4 p-1">
+                            <i class="bi bi-heart p-1 border border-dark rounded-1"></i>
+                            <i class="bi text-warning bi-heart-fill border border-dark p-1 rounded-1"></i>
+                        </div>
                 </div>
             </div>
-            <!-- Call to Action-->
-            <div class="card text-white bg-secondary my-5 py-4 text-center">
-                <div class="card-body">
-                    <p class="text-white m-0">GREAT OFFERS ARE WAITING FOR YOU....</p>
-                </div>
-            </div>
-            <!-- Content Row-->
-            <div class="row gx-4 gx-lg-5">
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card One</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni
-                                quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card Two</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur
-                                ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id
-                                dolore voluptates quos eligendi labore.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-5">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Card Three</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni
-                                quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-                        </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-                    </div>
-                </div>
-            </div>
+         
+
+           
         </div>
     </div>
+    <script src='https://code.jquery.com/jquery-1.11.0.js'></script>
+    <script src='https://unpkg.com/xzoom/dist/xzoom.min.js'></script>
+    <script>
+        (function ($) {
+            $(document).ready(function() {
+                $('.xzoom, .xzoom-gallery').xzoom({zoomWidth: 400, zoomHeight:400, title: true, tint: '#333', Xoffset: 15});
+            
+            });
+        })(jQuery);
+    </script>
 
     <script src="../assets/js/cart.js"></script>
     <!-- include footer -->
