--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -37,56 +37,6 @@
 			</div>
 		</section><!-- End Hero Slider Section -->
 
-		<div class="container-fluid p-0 text-center my-3 pt-5 mt-5">
-			<div class="row mx-auto my-auto justify-content-center">
-				<div class="col-md-12">
-					<h3>
-						Great Offers
-					</h3>
-					<hr>
-				</div>
-				<div id="recipeCarousel" class="carousel slide px-0" data-bs-ride="carousel">
-					<div class="carousel-inner" role="listbox">
-						<%  if (locals.food) { 
-							let first = true
-							food.forEach((item)=>{ 
-						%>
-							<div class="carousel-item <%= first === true ? 'active' : '' %>">
-								<div class="col-md-3">
-									<div class="card">
-										<div class="card-img">
-											<img src="/food/<%= item.image %>"
-												class="img-fluid">
-										</div>
-										<div class="card-img-overlay" style="background-color: rgb(21, 21, 21, 0.3);">
-											<h4 class="bg-warning rounded-circle" style="line-height: 100px; width: 100px;">
-												<b>50%Off</b>
-											</h4>	
-										</div>
-									</div>
-								</div>
-							</div>
-						<%  
-							first = false
-							}) 
-							}else{ 
-						%>
-							<p class="text-secondary">No products to display</p>
-						<% } %>
-					</div>
-					<a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button"
-						data-bs-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					</a>
-					<a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button"
-						data-bs-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					</a>
-				</div>
-			</div>
-		</div>
-
-
 		<!-- ======= Post Grid Section ======= -->
 		<section id="posts" class="posts">
 			<div class="container" data-aos="fade-up">
@@ -125,7 +75,11 @@
 												<% } %>
 											</a>
 											<div class="p-2">
-												<small class="text-secondary"><%= item.type === 1 ? "Veg" : "Non-Veg" %> &nbsp;<i class="bi bi-circle-fill text-<%= item.type === 1 ? "success" : "danger" %>"></i></small>
+												<small class="text-secondary"><%= item.type === 1 ? "Veg" : "Non-Veg" %> &nbsp;<i class="bi fs-6 bi-circle-fill text-<%= item.type === 1 ? "success" : "danger" %>"></i></small>
+												<div class="float-end fs-6">
+													<i title="added to cart" class="bi text-danger bi-bag p-1 fs-5" id="addToCart" onclick="addToCart(`<%= JSON.stringify(item) %>`, `<%= isAuthenticated %>`) "></i>
+													<i title="add to wishlist" class="bi text-danger bi-heart p-1 fs-5"></i>
+												</div>
 												<h2 style="height: 50px; padding-top: 10px;" class=""><a href="/foodDetail/<%= item.slug %>"><%= item.foodName %></a></h2>
 												<a href="/foodDetail/<%= item.slug %>"><button type="button" class="btn btn-danger float-end">Show Details</button></a>
 												<h2 class="pt-2"><a href="/foodDetail/" class="text-success"><b>₹ <%= item.discPrice %></b></a>&nbsp;&nbsp;<small class="text-secondary"><del>₹ <%= item.orgPrice %></del></small></h2>
@@ -168,5 +122,5 @@
             }
         });
     </script>
-
+	<script src="../assets/js/cart.js"></script>
 <%- include('./includes/footer') %>
