--- a/views/public/searchPage.ejs
+++ b/views/public/searchPage.ejs
@@ -26,6 +26,10 @@
                                 <% } %>
                             </a>
                             <small class="text-secondary"><%= item.type === 1 ? "Veg" : "Non-Veg" %> &nbsp;<i class="bi bi-circle-fill text-<%= item.type === 1 ? "success" : "danger" %>"></i></small>
+                            <div class="float-end fs-6">
+                                <i title="added to cart" class="bi text-danger bi-bag p-1 fs-5" id="addToCart" onclick="addToCart(`<%= JSON.stringify(item) %>`, `<%= isAuthenticated %>`) "></i>
+                                <i title="add to wishlist" class="bi text-danger bi-heart p-1 fs-5"></i>
+                            </div>
                             <h2 style="height: 50px; padding-top: 10px;" class=""><a href="/foodDetail/<%= item.slug %>"><%= item.foodName %></a></h2>
                             <a href="/foodDetail/<%= item.slug %>"><button type="button" class="btn btn-danger float-end">Show Details</button></a>
                             <h2 class="pt-2"><a href="/foodDetail/" class="text-success"><b>₹ <%= item.discPrice %></b></a>&nbsp;&nbsp;<small class="text-secondary"><del>₹ <%= item.orgPrice %></del></small></h2>
@@ -38,4 +42,5 @@
         </div>
     </div>
 </div>
+<script src="../assets/js/cart.js"></script>
 <%- include("./includes/footer") %>
